fix(*): fix background image alignment

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,6 +1,9 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #fff;
-    background-image: url('./assets/images/background.jpg');
+    background: url('./assets/images/background.jpg') no-repeat fixed center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
     box-sizing: border-box;
 }
